--- a/docker/src/ditesi/web/privado/componentes/header/index.html
+++ b/docker/src/ditesi/web/privado/componentes/header/index.html
@@ -5,8 +5,8 @@
           <i class="fa fa-bars" aria-hidden="true"></i>
         </button>
         <div class="navbar-brand menuLeft">
-          <div><img class=icoHeader src="img/usersico.gif" alt="" height="27" width="30"></div>
-          <div><a> Usuarios FCE</a></div>
+          <div><i class="iconoSistemas fa fa-modx" aria-hidden="true"></i></div>
+          <div><a> Sistemas FCE</a></div>
         </div>
       </div>
       <div class="collapse navbar-collapse" ng-class="!navCollapsed &amp;&amp; 'in'">
