Estoy estilando el sistema FCE

--- a/docker/src/ditesi/web/privado/componentes/header/index.html
+++ b/docker/src/ditesi/web/privado/componentes/header/index.html
@@ -6,7 +6,7 @@
         </button>
         <div class="navbar-brand menuLeft">
           <div><i class="iconoSistemas fa fa-modx" aria-hidden="true"></i></div>
-          <div><a> Sistemas FCE</a></div>
+          <div><a> Aplicaciones FCE</a></div>
         </div>
       </div>
       <div class="collapse navbar-collapse" ng-class="!navCollapsed &amp;&amp; 'in'">
