--- a/docker/src/ditesi/web/privado/index.html
+++ b/docker/src/ditesi/web/privado/index.html
@@ -22,7 +22,7 @@
   <!-- Awesome -->
   <link rel="stylesheet" href="libs/font-awesome-4.7.0/css/font-awesome.min.css">
   <!-- Fuentes Google -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
   <script src='module.js'></script>
   <script src="index.js"></script>
