Estoy estilando en nuevo fce

--- a/docker/src/ditesi/web/privado/index.html
+++ b/docker/src/ditesi/web/privado/index.html
@@ -23,6 +23,10 @@
   <link rel="stylesheet" href="libs/font-awesome-4.7.0/css/font-awesome.min.css">
   <!-- Fuentes Google -->
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Pavanam" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Chau+Philomene+One" rel="stylesheet">
+
+
 
   <script src='module.js'></script>
   <script src="index.js"></script>
