--- a/docker/src/ditesi/web/privado/componentes/header/index.html
+++ b/docker/src/ditesi/web/privado/componentes/header/index.html
@@ -2,7 +2,7 @@
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
           <span class="sr-only">Toggle navigation</span>
-          <i class="fa fa-bars" aria-hidden="true"></i>
+          <i class="fa fa-bars iconoHamburguesa" aria-hidden="true"></i>
         </button>
         <div class="navbar-brand menuLeft">
           <div><i class="iconoSistemas fa fa-modx" aria-hidden="true"></i></div>
